# splent_feature_profile

./: .gitignore  MANIFEST.in  pyproject.toml
src/splent_feature_profile/: models.py  repositories.py  routes.py
src/splent_feature_profile/tests/: test_unit.py
src/splent_io/splent_feature_profile/: __init__.py  forms.py  hooks.py  models.py  repositories.py  routes.py  seeders.py  services.py  signals.py
src/splent_io/splent_feature_profile/assets/js/: scripts.js  webpack.config.js
src/splent_io/splent_feature_profile/migrations/: env.py
src/splent_io/splent_feature_profile/migrations/versions/: 1c20b908bdae_splent_feature_profile.py  29f0c82ca134_splent_feature_profile.py  a1004987c343_splent_feature_profile.py  c1bdef453cc4_splent_feature_profile.py  f0861009f5e9_splent_feature_profile.py
src/splent_io/splent_feature_profile/templates/hooks/: navbar_user_name.html  sidebar_edit_profile.html
src/splent_io/splent_feature_profile/templates/profile/: edit.html
src/splent_io/splent_feature_profile/tests/: test_unit.py
src/splent_io/splent_feature_profile/tests/functional/: test_routes.py
src/splent_io/splent_feature_profile/tests/integration/: test_repositories.py
src/splent_io/splent_feature_profile/tests/unit/: test_services.py
