[build-system]
requires = ["setuptools>=80.3.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "splent_feature_profile"
version = "1.1.0"
requires-python = ">=3.13"
authors = [{ name = "DiversoLab", email = "diversolab@us.es" }]
dependencies = [

]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.splent.contract]
description = "User profile feature: view and edit authenticated user profile"

[tool.splent.contract.provides]
routes = ["/profile/edit"]
blueprints = ["profile_bp"]
models = ["UserProfile"]
commands = []

[tool.splent.contract.requires]
features = ["auth"]
env_vars = []
